syntax = "proto3";

option java_package = "com.francotte.myrecipesstore.protobuf";
option java_multiple_files = true;

message User {
  int64 id = 1;
  string userName = 2;
  enum ConnectionMethod {
    EMAIL = 0;
    FACEBOOK = 1;
    GOOGLE = 2;
  }
  ConnectionMethod method = 3;
}

message UserInfo {
  bool connected = 1;
  User user = 2;
  string token = 3;
}